[gd_scene load_steps=17 format=3 uid="uid://cfbphdd74su8c"]

[ext_resource type="Script" path="res://src/ui/editor/editor.gd" id="1_rsqc6"]
[ext_resource type="Script" path="res://src/ui/upper_panel_container.gd" id="2_11iii"]
[ext_resource type="Script" path="res://src/ui/editor/code_editor.gd" id="2_didrn"]
[ext_resource type="Script" path="res://src/ui/editor/find_box.gd" id="4_5ubg7"]
[ext_resource type="Texture2D" uid="uid://dugnt34g7fnv0" path="res://src/assets/icons/select_all.png" id="5_d2sug"]
[ext_resource type="Texture2D" uid="uid://dx3psko1icbxt" path="res://src/assets/icons/previous_match.png" id="5_hxmfn"]
[ext_resource type="Texture2D" uid="uid://dg5dmfgq0njjm" path="res://src/assets/icons/next_match.png" id="6_ajrhi"]
[ext_resource type="Texture2D" uid="uid://x5i0t7wrt83t" path="res://src/assets/icons/replace_all.png" id="6_ig3st"]
[ext_resource type="Texture2D" uid="uid://h2p64urv4edg" path="res://src/assets/icons/case_insensitive.png" id="7_dkqao"]
[ext_resource type="Texture2D" uid="uid://5odq30jvxch6" path="res://src/assets/icons/replace_single.png" id="7_kjjky"]
[ext_resource type="Texture2D" uid="uid://d3wl4vltp8wun" path="res://src/assets/icons/regex.png" id="8_x0ufk"]
[ext_resource type="Texture2D" uid="uid://c1gjf4wqnnwdv" path="res://src/assets/icons/replace.png" id="9_0gw0l"]
[ext_resource type="Texture2D" uid="uid://dcl3wjt251p5s" path="res://src/assets/icons/close.png" id="13_j6gjy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fdh43"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kv086"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_i4v8i"]
number_color = Color(0.682353, 0.505882, 1, 1)
symbol_color = Color(0.972549, 0.972549, 0.94902, 1)
function_color = Color(0.4, 0.85098, 0.937255, 1)
member_variable_color = Color(0.4, 0.85098, 0.937255, 1)
member_keyword_colors = {
"active": Color(0.976471, 0.14902, 0.447059, 1),
"asm": Color(0.976471, 0.14902, 0.447059, 1),
"attribute": Color(0.976471, 0.14902, 0.447059, 1),
"bvec2": Color(0.976471, 0.14902, 0.447059, 1),
"bvec3": Color(0.976471, 0.14902, 0.447059, 1),
"bvec4": Color(0.976471, 0.14902, 0.447059, 1),
"cast": Color(0.976471, 0.14902, 0.447059, 1),
"centroid": Color(0.976471, 0.14902, 0.447059, 1),
"class": Color(0.976471, 0.14902, 0.447059, 1),
"common": Color(0.976471, 0.14902, 0.447059, 1),
"discard": Color(0.976471, 0.14902, 0.447059, 1),
"dmat2": Color(0.976471, 0.14902, 0.447059, 1),
"dmat2x2": Color(0.976471, 0.14902, 0.447059, 1),
"dmat2x3": Color(0.976471, 0.14902, 0.447059, 1),
"dmat2x4": Color(0.976471, 0.14902, 0.447059, 1),
"dmat3": Color(0.976471, 0.14902, 0.447059, 1),
"dmat3x2": Color(0.976471, 0.14902, 0.447059, 1),
"dmat3x3": Color(0.976471, 0.14902, 0.447059, 1),
"dmat3x4": Color(0.976471, 0.14902, 0.447059, 1),
"dmat4": Color(0.976471, 0.14902, 0.447059, 1),
"dmat4x2": Color(0.976471, 0.14902, 0.447059, 1),
"dmat4x3": Color(0.976471, 0.14902, 0.447059, 1),
"dmat4x4": Color(0.976471, 0.14902, 0.447059, 1),
"dvec2": Color(0.976471, 0.14902, 0.447059, 1),
"dvec3": Color(0.976471, 0.14902, 0.447059, 1),
"dvec4": Color(0.976471, 0.14902, 0.447059, 1),
"enum": Color(0.976471, 0.14902, 0.447059, 1),
"extern": Color(0.976471, 0.14902, 0.447059, 1),
"external": Color(0.976471, 0.14902, 0.447059, 1),
"filter": Color(0.976471, 0.14902, 0.447059, 1),
"fixed": Color(0.976471, 0.14902, 0.447059, 1),
"flat": Color(0.976471, 0.14902, 0.447059, 1),
"fvec2": Color(0.976471, 0.14902, 0.447059, 1),
"fvec3": Color(0.976471, 0.14902, 0.447059, 1),
"fvec4": Color(0.976471, 0.14902, 0.447059, 1),
"goto": Color(0.976471, 0.14902, 0.447059, 1),
"half": Color(0.976471, 0.14902, 0.447059, 1),
"highp": Color(0.976471, 0.14902, 0.447059, 1),
"hvec2": Color(0.976471, 0.14902, 0.447059, 1),
"hvec3": Color(0.976471, 0.14902, 0.447059, 1),
"hvec4": Color(0.976471, 0.14902, 0.447059, 1),
"iimage1D": Color(0.976471, 0.14902, 0.447059, 1),
"iimage1DArray": Color(0.976471, 0.14902, 0.447059, 1),
"iimage2D": Color(0.976471, 0.14902, 0.447059, 1),
"iimage2DArray": Color(0.976471, 0.14902, 0.447059, 1),
"iimage3D": Color(0.976471, 0.14902, 0.447059, 1),
"iimageBuffer": Color(0.976471, 0.14902, 0.447059, 1),
"iimageCube": Color(0.976471, 0.14902, 0.447059, 1),
"image1D": Color(0.976471, 0.14902, 0.447059, 1),
"image1DArray": Color(0.976471, 0.14902, 0.447059, 1),
"image1DArrayShadow": Color(0.976471, 0.14902, 0.447059, 1),
"image1DShadow": Color(0.976471, 0.14902, 0.447059, 1),
"image2D": Color(0.976471, 0.14902, 0.447059, 1),
"image2DArray": Color(0.976471, 0.14902, 0.447059, 1),
"image2DArrayShadow": Color(0.976471, 0.14902, 0.447059, 1),
"image2DShadow": Color(0.976471, 0.14902, 0.447059, 1),
"image3D": Color(0.976471, 0.14902, 0.447059, 1),
"imageBuffer": Color(0.976471, 0.14902, 0.447059, 1),
"imageCube": Color(0.976471, 0.14902, 0.447059, 1),
"in": Color(0.976471, 0.14902, 0.447059, 1),
"inline": Color(0.976471, 0.14902, 0.447059, 1),
"inout": Color(0.976471, 0.14902, 0.447059, 1),
"input": Color(0.976471, 0.14902, 0.447059, 1),
"interface": Color(0.976471, 0.14902, 0.447059, 1),
"invariant": Color(0.976471, 0.14902, 0.447059, 1),
"isampler1D": Color(0.976471, 0.14902, 0.447059, 1),
"isampler1DArray": Color(0.976471, 0.14902, 0.447059, 1),
"isampler2D": Color(0.976471, 0.14902, 0.447059, 1),
"isampler2DArray": Color(0.976471, 0.14902, 0.447059, 1),
"isampler2DMS": Color(0.976471, 0.14902, 0.447059, 1),
"isampler2DMSArray": Color(0.976471, 0.14902, 0.447059, 1),
"isampler2DRect": Color(0.976471, 0.14902, 0.447059, 1),
"isampler3D": Color(0.976471, 0.14902, 0.447059, 1),
"isamplerBuffer": Color(0.976471, 0.14902, 0.447059, 1),
"isamplerCube": Color(0.976471, 0.14902, 0.447059, 1),
"isamplerCubeArray": Color(0.976471, 0.14902, 0.447059, 1),
"ivec2": Color(0.976471, 0.14902, 0.447059, 1),
"ivec3": Color(0.976471, 0.14902, 0.447059, 1),
"ivec4": Color(0.976471, 0.14902, 0.447059, 1),
"layout": Color(0.976471, 0.14902, 0.447059, 1),
"long": Color(0.976471, 0.14902, 0.447059, 1),
"lowp": Color(0.976471, 0.14902, 0.447059, 1),
"mat2": Color(0.976471, 0.14902, 0.447059, 1),
"mat2x2": Color(0.976471, 0.14902, 0.447059, 1),
"mat2x3": Color(0.976471, 0.14902, 0.447059, 1),
"mat2x4": Color(0.976471, 0.14902, 0.447059, 1),
"mat3": Color(0.976471, 0.14902, 0.447059, 1),
"mat3x2": Color(0.976471, 0.14902, 0.447059, 1),
"mat3x3": Color(0.976471, 0.14902, 0.447059, 1),
"mat3x4": Color(0.976471, 0.14902, 0.447059, 1),
"mat4": Color(0.976471, 0.14902, 0.447059, 1),
"mat4x2": Color(0.976471, 0.14902, 0.447059, 1),
"mat4x3": Color(0.976471, 0.14902, 0.447059, 1),
"mat4x4": Color(0.976471, 0.14902, 0.447059, 1),
"mediump": Color(0.976471, 0.14902, 0.447059, 1),
"namespace": Color(0.976471, 0.14902, 0.447059, 1),
"noinline": Color(0.976471, 0.14902, 0.447059, 1),
"noperspective": Color(0.976471, 0.14902, 0.447059, 1),
"out": Color(0.976471, 0.14902, 0.447059, 1),
"output": Color(0.976471, 0.14902, 0.447059, 1),
"packed": Color(0.976471, 0.14902, 0.447059, 1),
"partition": Color(0.976471, 0.14902, 0.447059, 1),
"patch": Color(0.976471, 0.14902, 0.447059, 1),
"precision": Color(0.976471, 0.14902, 0.447059, 1),
"public": Color(0.976471, 0.14902, 0.447059, 1),
"row_major": Color(0.976471, 0.14902, 0.447059, 1),
"sample": Color(0.976471, 0.14902, 0.447059, 1),
"sampler1D": Color(0.976471, 0.14902, 0.447059, 1),
"sampler1DArray": Color(0.976471, 0.14902, 0.447059, 1),
"sampler1DArrayShadow": Color(0.976471, 0.14902, 0.447059, 1),
"sampler1DShadow": Color(0.976471, 0.14902, 0.447059, 1),
"sampler2D": Color(0.976471, 0.14902, 0.447059, 1),
"sampler2DArray": Color(0.976471, 0.14902, 0.447059, 1),
"sampler2DArrayShadow": Color(0.976471, 0.14902, 0.447059, 1),
"sampler2DMS": Color(0.976471, 0.14902, 0.447059, 1),
"sampler2DMSArray": Color(0.976471, 0.14902, 0.447059, 1),
"sampler2DRect": Color(0.976471, 0.14902, 0.447059, 1),
"sampler2DRectShadow": Color(0.976471, 0.14902, 0.447059, 1),
"sampler2DShadow": Color(0.976471, 0.14902, 0.447059, 1),
"sampler3D": Color(0.976471, 0.14902, 0.447059, 1),
"sampler3DRect": Color(0.976471, 0.14902, 0.447059, 1),
"samplerBuffer": Color(0.976471, 0.14902, 0.447059, 1),
"samplerCube": Color(0.976471, 0.14902, 0.447059, 1),
"samplerCubeArray": Color(0.976471, 0.14902, 0.447059, 1),
"samplerCubeArrayShadow": Color(0.976471, 0.14902, 0.447059, 1),
"samplerCubeShadow": Color(0.976471, 0.14902, 0.447059, 1),
"short": Color(0.976471, 0.14902, 0.447059, 1),
"sizeof": Color(0.976471, 0.14902, 0.447059, 1),
"smooth": Color(0.976471, 0.14902, 0.447059, 1),
"static": Color(0.976471, 0.14902, 0.447059, 1),
"subroutine": Color(0.976471, 0.14902, 0.447059, 1),
"superp": Color(0.976471, 0.14902, 0.447059, 1),
"template": Color(0.976471, 0.14902, 0.447059, 1),
"this": Color(0.976471, 0.14902, 0.447059, 1),
"typedef": Color(0.976471, 0.14902, 0.447059, 1),
"uimage1D": Color(0.976471, 0.14902, 0.447059, 1),
"uimage1DArray": Color(0.976471, 0.14902, 0.447059, 1),
"uimage2D": Color(0.976471, 0.14902, 0.447059, 1),
"uimage2DArray": Color(0.976471, 0.14902, 0.447059, 1),
"uimage3D": Color(0.976471, 0.14902, 0.447059, 1),
"uimageBuffer": Color(0.976471, 0.14902, 0.447059, 1),
"uimageCube": Color(0.976471, 0.14902, 0.447059, 1),
"uniform": Color(0.976471, 0.14902, 0.447059, 1),
"union": Color(0.976471, 0.14902, 0.447059, 1),
"unsigned": Color(0.976471, 0.14902, 0.447059, 1),
"usampler1D": Color(0.976471, 0.14902, 0.447059, 1),
"usampler1DArray": Color(0.976471, 0.14902, 0.447059, 1),
"usampler2D": Color(0.976471, 0.14902, 0.447059, 1),
"usampler2DArray": Color(0.976471, 0.14902, 0.447059, 1),
"usampler2DMS": Color(0.976471, 0.14902, 0.447059, 1),
"usampler2DMSArray": Color(0.976471, 0.14902, 0.447059, 1),
"usampler2DRect": Color(0.976471, 0.14902, 0.447059, 1),
"usampler3D": Color(0.976471, 0.14902, 0.447059, 1),
"usamplerBuffer": Color(0.976471, 0.14902, 0.447059, 1),
"usamplerCube": Color(0.976471, 0.14902, 0.447059, 1),
"usamplerCubeArray": Color(0.976471, 0.14902, 0.447059, 1),
"using": Color(0.976471, 0.14902, 0.447059, 1),
"uvec2": Color(0.976471, 0.14902, 0.447059, 1),
"uvec3": Color(0.976471, 0.14902, 0.447059, 1),
"uvec4": Color(0.976471, 0.14902, 0.447059, 1),
"varying": Color(0.976471, 0.14902, 0.447059, 1),
"vec2": Color(0.976471, 0.14902, 0.447059, 1),
"vec3": Color(0.976471, 0.14902, 0.447059, 1),
"vec4": Color(0.976471, 0.14902, 0.447059, 1),
"volatile": Color(0.976471, 0.14902, 0.447059, 1)
}
color_regions = {
"\" \"": Color(0.901961, 0.858824, 0.454902, 1),
"#": Color(0.578431, 0.578431, 0.578431, 1),
"' '": Color(0.901961, 0.858824, 0.454902, 1),
"/* */": Color(0.458824, 0.443137, 0.368627, 1),
"//": Color(0.458824, 0.443137, 0.368627, 1)
}

[node name="Editor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("1_rsqc6")

[node name="UpperPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"UpperPanelContainer"
script = ExtResource("2_11iii")

[node name="MenuBar" type="HBoxContainer" parent="UpperPanelContainer"]
layout_mode = 2

[node name="LeftBar" type="HBoxContainer" parent="UpperPanelContainer/MenuBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="UpperPanelContainer/MenuBar/LeftBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Save the file (Ctrl+S)"
theme_override_styles/focus = SubResource("StyleBoxEmpty_fdh43")
text = "Save"
flat = true
alignment = 0
text_overrun_behavior = 3

[node name="RightBar" type="HBoxContainer" parent="UpperPanelContainer/MenuBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="PathButton" type="Button" parent="UpperPanelContainer/MenuBar/RightBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_kv086")
text = "path"
flat = true
alignment = 2
text_overrun_behavior = 3

[node name="CodeEditor" type="CodeEdit" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "hello there"
caret_blink = true
syntax_highlighter = SubResource("CodeHighlighter_i4v8i")
highlight_all_occurrences = true
symbol_lookup_on_click = true
gutters_draw_line_numbers = true
code_completion_enabled = true
code_completion_prefixes = Array[String]([".", ",", "(", "=", "$", "@", "\"", "'"])
indent_use_spaces = true
indent_automatic = true
indent_automatic_prefixes = Array[String](["{", "("])
auto_brace_completion_highlight_matching = true
script = ExtResource("2_didrn")

[node name="FindBox" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"LowerPanelContainer"
script = ExtResource("4_5ubg7")

[node name="HBoxContainer" type="HBoxContainer" parent="FindBox"]
layout_mode = 2

[node name="PatternLineEdit" type="LineEdit" parent="FindBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Find..."

[node name="ReplacementLineEdit" type="LineEdit" parent="FindBox/HBoxContainer" groups=["replace"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Replace with..."

[node name="PreviousMatchButton" type="Button" parent="FindBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Go to previous occurrence"
icon = ExtResource("5_hxmfn")

[node name="MatchCountLabel" type="Label" parent="FindBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
vertical_alignment = 1

[node name="NextMatchButton" type="Button" parent="FindBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Go to next occurrence"
icon = ExtResource("6_ajrhi")

[node name="ReplaceButton" type="Button" parent="FindBox/HBoxContainer" groups=["replace"]]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Replace currently selected occurrence"
icon = ExtResource("7_kjjky")

[node name="SelectAllOccurrencesButton" type="Button" parent="FindBox/HBoxContainer" groups=["find"]]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Select all occurences with multiple carets"
icon = ExtResource("5_d2sug")

[node name="ReplaceAllOccurrencesButton" type="Button" parent="FindBox/HBoxContainer" groups=["replace"]]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Select all occurences with multiple carets"
icon = ExtResource("6_ig3st")

[node name="CaseInsensitiveToggle" type="CheckBox" parent="FindBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Use a case-insensitive match"
icon = ExtResource("7_dkqao")

[node name="RegExToggle" type="CheckBox" parent="FindBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Use Regular expressions for pattern matching, instead of simple pattern matching"
icon = ExtResource("8_x0ufk")

[node name="ReplaceToggle" type="CheckBox" parent="FindBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Enter find-and-replace mode"
icon = ExtResource("9_0gw0l")

[node name="CloseButton" type="Button" parent="FindBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Hide"
icon = ExtResource("13_j6gjy")

[node name="InfoBox" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InfoBox"]
layout_mode = 2

[node name="CaretPosLabel" type="Label" parent="InfoBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Unsaved changes"
size = Vector2i(239, 80)
ok_button_text = "Save"
dialog_text = "There are unsaved changes"

[node name="CodeCompletionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="UpperPanelContainer/MenuBar/LeftBar/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="caret_changed" from="CodeEditor" to="." method="_on_code_editor_caret_changed"]
[connection signal="code_completion_requested" from="CodeEditor" to="." method="_on_code_editor_code_completion_requested"]
[connection signal="find_requested" from="CodeEditor" to="." method="_on_code_editor_find_requested"]
[connection signal="symbol_lookup" from="CodeEditor" to="." method="_on_code_editor_symbol_lookup"]
[connection signal="symbol_validate" from="CodeEditor" to="." method="_on_code_editor_symbol_validate"]
[connection signal="text_changed" from="CodeEditor" to="." method="_on_code_editor_text_changed"]
[connection signal="go_to_next_requested" from="FindBox" to="." method="_on_find_box_go_to_next_requested"]
[connection signal="go_to_previous_requested" from="FindBox" to="." method="_on_find_box_go_to_previous_requested"]
[connection signal="pattern_changed" from="FindBox" to="." method="_on_find_box_pattern_changed"]
[connection signal="select_all_occurrences_requested" from="FindBox" to="." method="_on_find_box_select_all_occurrences_requested"]
[connection signal="text_submitted" from="FindBox/HBoxContainer/PatternLineEdit" to="FindBox" method="_on_pattern_line_edit_text_submitted"]
[connection signal="pressed" from="FindBox/HBoxContainer/CloseButton" to="FindBox" method="_on_close_button_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="custom_action" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_custom_action"]
[connection signal="timeout" from="CodeCompletionTimer" to="." method="_on_code_editor_code_completion_requested"]
